	R_HOME/bin/i386/R.exe or R_HOME/bin/x64/R.exe, and analogously
	for Rscript.exe.  If not set on the command-line these check
	the environment variable R_ARCH for the architecture to use.

	For now, almost all (32- or 64-bit) packages with compiled
	code built under 2.{10,11}.x can be used, but this will be
	disabled before release.

    o	R CMD INSTALL can install zipfiles as binary packages.


INSTALLATION

    o	The preferred toolchain for 32-bit builds (including packages)
	is now based on gcc 4.5.0: see the 'R Installation and
	Administration Manual'.

    o	It is now possible to build R and the Inno Setup-based
	installer without Perl.


64-bit NEWS

    o   The plan is to merge the 32- and 64-bit distributions and have
	a common repository of packages.  This process has been
	started, and some of the steps are recorded here (and some are
	in progress).

    o	There is a combined installer (called R-<version>-win.exe).
	When used under 32-bit Windows this works as before and
	installs 32-bit R.  When used under 64-bit Windows there are
	options to install either or both of 32- and 64-bit R: the
	current default is to install both.

    o	The default package type is "win.binary" on both 32- and
	64-bit builds: a single repository contains binary packages
	for both architectures.  This is in place for CRAN and
	CRANextras: type = "win64.binary" can still be used for
	repositories which follow the R 2.11.x convention.  With the
	default filters (see ?available.packages) packages will only
	be offered if they are available for the current architecture.

    o	For those building R from the sources, the 64-bit Tcl binary
	distribution is now in file R64a_Tcl_8-5-8.zip and contains
	e.g. directory Tcl/bin64 and not Tcl/bin.


PACKAGE INSTALLATION

    o	The deprecated environment variable RHOME is no longer set when
	a package is installed: use R_HOME instead (and depend on R
	(>= 2.9) ).




	**************************************************
	*						 *