@@ -941,3 +941,30 @@ void delobj(object obj)
 	break;
     }
 }
+
+void setcaret(object obj, int x, int y, int width, int height)
+{
+    if (! obj)
+    	return;
+    if (width != obj->caretwidth || height != obj->caretheight) {
+	if (obj->caretwidth > 0) DestroyCaret();
+	obj->caretwidth = width;
+	obj->caretheight = height;
+	if (width > 0) {
+	    CreateCaret(obj->handle, (HBITMAP) NULL, width, height);
+	    obj->caretshowing = 0;
+	}
+    }
+    SetCaretPos(x, y);
+}
+
+void showcaret(object obj, int showing)
+{
+    if (! obj || showing == obj->caretshowing)
+    	return;
+    obj->caretshowing = showing;
+    if (showing)
+    	ShowCaret(obj->handle);
+    else
+    	HideCaret(obj->handle);
+}
