@@ -42,7 +42,7 @@ struct structConsoleData {
     int   w, h;			/* dimensions in pixel */
 
     font  f;			/* font */
-    int   fw, fh;
+    int   fw, fh;  
     int   top, right;           /* borders */
     rgb   guiColors[numGuiColors]; /* colours */
     int   fv, fc;		/* first line and first char visible */
@@ -66,6 +66,8 @@ struct structConsoleData {
 
     char  chbrk, modbrk;	/* hook for user's break */
     void  (*fbrk) ();
+    
+    int cursor_blink;
 
     menuitem mcopy, mpaste, mpastecmds, mpopcopy, mpoppaste, mpoppastecmds;
 };
@@ -101,7 +103,7 @@ typedef struct structConsoleData *ConsoleData;
 #define CURROW  (p->r)  /* row of cursor */
 #define CURCOL  (p->c)  /* column of cursor on whole line */
 
-#define WRITELINE(i, j) writeline(p, i, j)
+#define WRITELINE(i, j) writeline(c, p, i, j)
 
 #define REDRAW drawconsole(c, getrect(c))
 
@@ -110,7 +112,7 @@ typedef struct structConsoleData *ConsoleData;
 
 ConsoleData newconsoledata(font f, int rows, int cols,
     int bufbytes, int buflines,
-    rgb *guiColors, int kind, int buffered);
+    rgb *guiColors, int kind, int buffered, int cursor_blink);
 
 void freeConsoleData(ConsoleData p);
 void setfirstvisible(control c, int fv);
